--- a/weather/package.json
+++ b/weather/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.8",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "framer-motion": "^12.11.0",
     "http-proxy-middleware": "^3.0.3",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
@@ -34,15 +35,15 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "concurrently": "^9.1.2",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "postcss": "^8.5.2",
-    "tailwindcss": "^4.0.6",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.6",
     "vite": "^6.1.0"
   }
 }
