--- a/weather/package.json
+++ b/weather/package.json
@@ -19,6 +19,8 @@
     "framer-motion": "^12.11.0",
     "http-proxy-middleware": "^3.0.3",
     "leaflet": "^1.9.4",
+    "lottie-react": "^2.4.1",
+    "lucide-react": "^0.510.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
